#16 [feat] : 추가한 응답 필드를 함께 반환한다